Quartz sync: Jan 21, 2025, 3:45 PM

--- a/content/NOTES/2025-01-21.md
+++ b/content/NOTES/2025-01-21.md
@@ -15,8 +15,7 @@ she doesnt start off with the twintails, she gets instanced w/o them
 like her whole purpose was to not be good at the viewership game so she'd fail her first debut match and coronet could quietly guide her along in the lower sectors
 to do her job of deallocating the warshells... but that failed ofc...
 
-now she's just an idolshell with task manager privileges who could theoretically deallocate
-everyone if she ever becomes aware of the fact that she can just. erase ppl w/ her reson crucible 
+now she's just an idolshell with task manager privileges who could theoretically deallocate everyone if she ever becomes aware of the fact that she can just. erase ppl w/ her reson crucible 
 
 i don't remember if i had specific design stuff in mind for her previously but i like her design enough to just iterate off it
 she actually kind of looks like a navshell, which i like 
@@ -49,8 +48,8 @@ maybe restoring some parts of the coronet that previously couldn't be restored
 i guess u could call it a... reunion.... hehehehe
 
 the whole uni thing is definitely postgame content
-reconstructing the neuralgraph of the alpha surrogate to buy the coronet some time but also bring parella's friend back from the dead
-and give the shells a very important figure who can keep them stable through it all
+reconstructing the neuralgraph of the alpha surrogate to buy the coronet some time but also bring parella's friend back from the dead... or perhaps better to say make them alive in one piece? uni technically isn't dead but she isn't herself anymore and will never be
+regardless, uni's functionality remains the same, it gives the shells a very important figure who can keep them stable through it all
 
 i think the idolshells having as much mental stability as they do is partly because there's tiny parts of uni in mostly everyone
 like uni's neuralgraph is very good at self-regulation
