--- a/content/NOTES/2025-01-18.md
+++ b/content/NOTES/2025-01-18.md
@@ -2,13 +2,13 @@
 tags:
   - notes
 ---
-i love glyphs though
+i love [[GLYPHS|glyphs]] though
 
 little 2d machine lifeforms that metabolize perception into thought and plant it into you
 in a way,
 it's a form of psychic phenomena
 
-the idea of "god is trapped here with us and is trying to escape the heat death of the universe because both it and mortality are not natural" is fun 
+the idea of "[[AUTHOR|god]] is trapped here with us and is trying to escape the heat death of the universe because both it and mortality are not natural" is fun 
 way better than it just being a hostile and unknowable force 
 its just incredibly desperate
 all major forms of humanity's technological progress ultimately come to serve this thing abandoning us so it can keep going 
