--- a/content/NOTES/2025-01-20.md
+++ b/content/NOTES/2025-01-20.md
@@ -10,7 +10,7 @@ promfx-outline is gonna be our new repo for the outline plugin, set that stuff u
 
 start shoving panprom stuff into here, maybe work on eleven's refsheet.
 
-alright so we have notes going now. cool.
+alright so we have notes+wiki going now. cool.
 it's gonna feel weird doing notetaking in here rather than discord but w/e 
 i'll get used to it eventually. its better in the longterm
 
