Quartz sync: Jan 21, 2025, 5:18 PM

--- a/content/NOTES/2025-01-20.md
+++ b/content/NOTES/2025-01-20.md
@@ -2,13 +2,13 @@
 tags:
   - notes
 ---
-hi. i feel like shit honestly. so i'm going to put this here
+hi. i feel like shit!!!!!!!!!!!!!!!!!!!!! so i'm going to put this here
 
 canceled da chatgpt subscription. permanently deleted account. its cool but its like. too cool if you get what i mean. i will talk to the AI again once it is more sapient!
 
-promfx-outline is gonna be our new repo for the outline plugin, set that stuff up
+promfx-outline is gonna be our new repo for the outline plugin, ~~settin that stuff up~~ i set it up
 
-start shoving panprom stuff into here, maybe work on eleven's refsheet.
+start shoving panprom stuff into wiki, maybe work on eleven's refsheet.
 
 alright so we have notes+wiki going now. cool.
 it's gonna feel weird doing notetaking in here rather than discord but w/e 
