Quartz sync: Jan 21, 2025, 10:09 PM

--- a/content/NOTES/2025-01-21.md
+++ b/content/NOTES/2025-01-21.md
@@ -8,7 +8,7 @@ tags:
 gonna make a refsheet for her so i can model her
 i love her goofy little antennae
 
-even tho shes as close as factory default as the coronet could make her, there's still some stuff that the coronet had to explicitly pick out for her
+even tho shes as close as factory default as [[THE CORONET|the coronet]] could make her, there's still some stuff that the coronet had to explicitly pick out for her
 like her appearance. its an unused shell model. coronet just picked the one that was the least flashy looking 
 she doesnt start off with the twintails, she gets instanced w/o them 
 
