Quartz sync: Jan 21, 2025, 10:37 PM

--- a/content/NOTES/2025-01-20.md
+++ b/content/NOTES/2025-01-20.md
@@ -4,7 +4,7 @@ tags:
 ---
 hi. i feel like shit!!!!!!!!!!!!!!!!!!!!! so i'm going to put this here
 
-canceled da chatgpt subscription. permanently deleted account. GONE.
+canceled da chatgpt subscription. permanently deleted account. GONE. FOREVER
 don't get me wrong. its cool but its like. too cool if you get what i mean. as in it wastes my productivity in a cool way!!! i get cool ideas from it!!! but!!! i dont do shit with em!!!! LOL
 so i'm fixing that. tbh i don't really need it even though i see the utility. $20 a month subscription is also weuwueuwueue on my wallet
 perhaps i will talk to the AI again once it is more sapient + does not cost Money!
