Quartz sync: Jan 22, 2025, 4:45 PM

--- a/content/NOTES/2025-01-22.md
+++ b/content/NOTES/2025-01-22.md
@@ -28,3 +28,79 @@ so content updates that add new shells could be interpreted as the coronet final
 (of course it can also just be explained w/ timeline displacement)
 though some could just be actually new shells
 seeing some shells get instanced after eleven does would be interesting
+
+prommers rise up .
+
+vespid: 7/10 rating. quite prommable. content
+cerise: 8/10 rating. excellent recipient of the promming.
+eleven: 11/10 rating. built for promming. takes a very good prom. exquisite
+croquet: 2/10 rating. bit hand in the attempt to prom. vile specimen
+parella: 6/10 rating. started crying but took the prom well despite that. confusing but admirable 
+![:vespid_petpet:](https://cdn.discordapp.com/emojis/1271602914477215834.webp?size=80&animated=true)
+
+i like how hair solves my problem of "how do you doink the robot without giving it parts for doinking that i think is lame for robots to have"
+
+shell hair is just a sensory grid and the creators of the shells wanted them to react positively to being headpetted and have more incentive to take care of their appearance so grooming hair = positive reward
+but left unsupervised it literally just evolved into robot sex for them 
+they like. started making specialized combs and brushes SPECIFICALLY for maximizing that fuckin reward. they fuckin figured that shit out
+
+creators eventually put 2 and 2 together and realized they accidentally invented some sexual activity equivalent through a hair-based medium and were like "oh no" 
+those specialized brushes and combs are literally just their. fun toy equivalents
+though there are also regular brushes and combs that don't get them off
+
+like dude. just look at these
+these are definitely sextoys LMFAO 
+![[Pasted image 20250122164432.png]]
+
+parella has like 50 of them
+
+oh yeah. considering eleven starts off w/o twintails when she's first instanced, i imagine the twintails are just a gift from the coronet that she stumbles across at one of the modification shops
+after its kind of accepted that its plan with eleven failed
+her model might have originally had them, but the coronet removed them so she'd be less flashy looking. bc she needed to fail her debut match 
+i imagine there's neural ports at parts of the antennae where the twintails connect?
+it's not really part of the hair on her head, they're moreso extensions 
+
+maybe its the coronet's way of saying sorry, or maybe it's just its pragmatic approach towards ensuring she's more effective as an idolshell after being put on that route by parella's intervention
+i think it'd be a mixture of both, because the coronet is kind of afraid of her
+
+the earlier talk abt reconstructing uni's neuralgraph (i deleted it and put it on the wiki now) also makes me think about this
+were there any prompts for idolshells that were never used and are just sitting somewhere in the starlit district? part of me definitely thinks so
+it'd be really cool if you could find prompts (complete or incomplete) that could be brought to hospice/the coronet, and it'll use them to instance new shells 
+giving people who never were the chance to be. that seems really neat
+the coronet can only do so much with recycling the neuralgraph data it already has 
+
+it would also be interesting if a shell took upon an interest in becoming a prompter themselves
+though majority of the shells who would event want to do this decided to become aphids and they are no longer participating in the viewership game 
+gamma, however, is still a shell, and they have quite the noteworthy interest in self-modification 
+shells who become aphids essentially have their neuralgraph components converted into biological equivalencies
+meaning they are still the same shell, but the parts that comprise them are fundamentally different in nature
+they are still the same shell, at first
+aphids mentally evolve much differently from how shells do, and aphids would find that shells are much more limited with their neuralgraphs
+but, some might find the process of tinkering with one fascinating
+
+some aphids might miss being more defined, as their minds progressively evolve into something they don't quite recognize, even though it is them
+
+i think this makes the shells still in the coronet even more interesting. because they have the choice to just. escape the viewership game as an aphid, yet they choose not to
+vespid and cerise became aphids, but they still exist as shells in the coronet
+maybe they both decided to back out midway 
+it'd be very interesting if the idolshells had the option to opt out whenever they wanted, similar to how hospice can relinquish control of the coronet whenever she wants 
+previous i was thinking that they would just be trapped, but having it be a choice to stay feels much more interesting 
+
+they can opt out, but they'll lose everything
+no more new instances either
+so whoever is in the coronet is actively deciding to stay there
+i like that. it's unexpectedly humane for them to have the ability to decide that
+
+after the first resonance event, lluvia opted out of maintaining her navi communications tower, but left behind an automated echo of herself to maintain tower functionality 
+it isn't her, but it does what she did
+she could have just abandoned the role completely and disappeared, leaving the tower to slowly crumble apart, but given the current circumstances, that choice would have rippled throughout the entire facility, bringing about cascading failures 
+and that was not something she desired
+gamma also very badly wanted to disappear, but at the time did not have the expertise in self-automation like lluvia did, and did not just want to opt out, out of similar fears that lluvia had 
+so they, very naively, modified themselves to repeatedly self-terminate, to stave off the issue
+they were not thinking right during this 
+
+they were probably thinking "i do not want to fully disappear, because doing so will catastrophically damage the facility in its current state, so i will settle for the next best thing i can do" 
+it was a choice made out of despair, but now it has turned into a fun obsession
+despite their enthusiasm, they have not quite recovered from the event that had sparked that choice, and it is plainly seen through their actions 
+
+that's all for now hehe
