Quartz sync: Jan 22, 2025, 4:48 PM

--- a/content/NOTES/2025-01-22.md
+++ b/content/NOTES/2025-01-22.md
@@ -50,7 +50,7 @@ though there are also regular brushes and combs that don't get them off
 
 like dude. just look at these
 these are definitely sextoys LMFAO 
-![[Pasted image 20250122164432.png]]
+![[Pasted image 20250122164432.png|400]]
 
 parella has like 50 of them
 
