Quartz sync: Jan 22, 2025, 7:39 PM

--- a/content/NOTES/2025-01-22.md
+++ b/content/NOTES/2025-01-22.md
@@ -103,4 +103,31 @@ they were probably thinking "i do not want to fully disappear, because doing so 
 it was a choice made out of despair, but now it has turned into a fun obsession
 despite their enthusiasm, they have not quite recovered from the event that had sparked that choice, and it is plainly seen through their actions 
 
-that's all for now hehe
+i imagine gamma's neuralgraph is prone to destabilization after some time, so they self-terminate and re-instance to solve the problem!
+it might look like they are incredibly suicidal, but this is actually the most effective way to sustain their mental integrity!
+
+i have more to add to the lore pile since i am taking a break and have accumulated thoughts!
+hem reson users probably do not have to regularly reinstance like regular shells have to! they have partly bypassed their 12 day operational lifespan through the assimilation of biological components
+reinstancing entails moving the blackbox containing the shell's neuralgraph to a freshly made body. the body, being made of ivory, degrades over time, and at some point it becomes easier to swap to a new body than to maintain what is already there
+as looked down upon as it is, hem reson users can just replace those failing components with sundew! 
+ivory is self-repairing, but repairs outside of that mechanism become harder to perform 
+but this downside is lightened by the fact that it is all recyclable 
+hem reson users however, are hem reson users partly because they have grown to dislike this procedure of re-instancing 
+blackboxes also have to be re-instanced at some point, but they are built to last much longer than the physical body
+so, a shell can go through multiple bodies without having to replace the blackbox containing their neuralgraph
+
+i think the idea of shells not really being able to be repaired like regular robots can is fun
+they are self-repairing to an extent. but to perform repairs outside of that process is difficult, and it is better to just swap a broken part out altogether than attempt to fix it 
+
+nyxbots on the other hand are more repairable, but can't self-repair like shells can 
+shells are kind of built with the expectation that they aren't going to be around for very long (bc their intended purpose on earth was to infiltrate locations, attack targets, get destroyed, and in the process of their destruction, release ivory dust that's toxic to humans) 
+whereas nyxbots are built like tanks and are self-operating military vehicles essentially
+built to last
+
+shell outer casing, when damaged, cracks and chips off and releases ivory dust
+but it can also use ivory dust to repair the damage
+nyxbot outer casing when damaged, just gets scratched and dented, and those dents don't rlly go away without manual repair 
+honestly an apt comparison is bone/enamel v.s. metal 
+ivory casing is strikingly similar to bone/enamel 
+ivory casing can be remineralized, similar to how teeth can
+
