Quartz sync: Jan 22, 2025, 7:45 PM

--- a/content/NOTES/2025-01-22.md
+++ b/content/NOTES/2025-01-22.md
@@ -130,4 +130,11 @@ nyxbot outer casing when damaged, just gets scratched and dented, and those dent
 honestly an apt comparison is bone/enamel v.s. metal 
 ivory casing is strikingly similar to bone/enamel 
 ivory casing can be remineralized, similar to how teeth can
+shells are literally just. moon skeletons LMAO
+
+this has vibes
+
+![[Pasted image 20250122194441.png|500]]
+![[Pasted image 20250122194452.png|500]]
+
 
