--- a/content/NOTES/2025-01-22.md
+++ b/content/NOTES/2025-01-22.md
@@ -12,18 +12,18 @@ i like how Asymmetrical. she is
 she has exactly eleven brain cells!
 she is working very hard to maintain them all
 
-itd be cool for shells' battles to be called promenades and the arenas are called stages
+itd be cool for shells' battles to be called [[PROMENADES|promenades]] and the arenas are called [[STAGES|stages]]
 and rounds are just described as 1st promenade, 2nd promenade, 3rd promenade etc
 
 i love panprom as the new name because i get to make the game use more french/british terminology now 
 i think thats hilarious
 im tempted to draw but im gonna save it for near the end of the day so i actually develop some kinda fuckin routine
-i like eleven's proportions in the rough currently but i might wanna make sure it doesn't look weird compared to the other shells. or maybe not.heheheh hehehe
+i like eleven's proportions in the rough currently but i might wanna make sure it doesn't look weird compared to the other shells. or maybe not. heheheh hehehe
 i literally never checked with cerise
 and she looked fine
 
 i thought of a cool meta-concept
-the coronet might have dry periods and might not be able to afford to instance certain shells for some time
+[[THE CORONET|the coronet]] might have dry periods and might not be able to afford to instance certain shells for some time
 so content updates that add new shells could be interpreted as the coronet finally being able to afford to make them
 (of course it can also just be explained w/ timeline displacement)
 though some could just be actually new shells
