--- a/content/NOTES/2025-01-22.md
+++ b/content/NOTES/2025-01-22.md
@@ -180,3 +180,8 @@ this has vibes
 
 hehehehe, i set up a little bot script that'll archive+delete messages i've sent in this channel, turn it into a markdown file, put it in my obsidian wiki and sync it to the github repo so it'll pop up on the online wiki
 lemme [[TEST|test]] it
+
+WARP [[RESON]]
+BURST [[RESON]]
+HEM [[RESON]] CRYSTALS
+[[RESON]]
