Quartz sync: Jan 22, 2025, 11:04 PM

--- a/content/NOTES/2025-01-22.md
+++ b/content/NOTES/2025-01-22.md
@@ -185,8 +185,15 @@ WARP [[RESON]]
 BURST [[RESON]]
 HEM [[RESON]] CRYSTALS
 [[RESON]]
+
 [[WARP [[RESON]]]]
 [[BURST [[RESON]]]]
 HEM [[[[RESON]] CRYSTALS]]
 [[RESON]]
+!wikify 1331844149493629019
+WARP RESON
+BURST RESON
+HEM [[RESON CRYSTALS]]
+RESON
+!wikify 1331844149493629019
 !wikify 1331844149493629019
