Quartz sync: Jan 22, 2025, 11:25 PM

--- a/content/NOTES/2025-01-22.md
+++ b/content/NOTES/2025-01-22.md
@@ -181,18 +181,12 @@ this has vibes
 hehehehe, i set up a little bot script that'll archive+delete messages i've sent in this channel, turn it into a markdown file, put it in my obsidian wiki and sync it to the github repo so it'll pop up on the online wiki
 lemme [[TEST|test]] it
 
-
-WARP RESON
-BURST RESON
-HEM [[RESON CRYSTALS]]
-RESON
+[[WARP RESON]]
+[[BURST RESON]]
+HEM [[[[RESON]] CRYSTALS]]
+[[RESON]]
 !wikify 1331844149493629019
 !wikify 1331844149493629019
-!wikify 1331844149493629019
-WARP RESON
-BURST RESON
-HEM [[RESON CRYSTALS]]
-RESON
 !wikify 1331844149493629019
 !wikify 1331844149493629019
 !wikify 1331844149493629019
