Quartz sync: Jan 23, 2025, 1:21 AM

--- a/content/NOTES/2025-01-22.md
+++ b/content/NOTES/2025-01-22.md
@@ -137,57 +137,4 @@ this has vibes
 ![[Pasted image 20250122194441.png|500]]
 ![[Pasted image 20250122194452.png|500]]
 
-a
-b
-c
-d
-e
-awkward
-$archive 1331812135566835796
-!archive 1331812135566835796
-!archive 1331812135566835796
-!archive 1331812135566835796
-b
-!archive 1331812135566835796
-
-!archive 1331812135566835796
-!archive 1331812135566835796
-wah
-!archive 1331812135566835796
-i have more to add to the lore pile since i am taking a break and have accumulated thoughts!
-[[HEM [[RESON]]|hem [[RESON|reson]]]] users probably do not have to regularly reinstance like regular [[SHELLS|shells]] have to! they have partly bypassed their 12 day operational lifespan through the assimilation of biological components
-reinstancing entails moving the blackbox containing the shell's neuralgraph to a freshly made body. the body, being made of [[IVORY|ivory]], degrades over time, and at some point it becomes easier to swap to a new body than to maintain what is already there
-as looked down upon as it is, [[HEM [[RESON]]|hem [[RESON|reson]]]] users can just replace those failing components with [[[[SUN]]DEW|[[SUN|sun]]dew]]!
-[[IVORY|ivory]] is self-repairing, but repairs outside of that mechanism become harder to perform
-but this downside is lightened by the fact that it is all recyclable
-[[HEM [[RESON]]|hem [[RESON|reson]]]] users however, are [[HEM [[RESON]]|hem [[RESON|reson]]]] users partly because they have grown to dislike this procedure of re-instancing
-blackboxes also have to be re-instanced at some point, but they are built to last much longer than the physical body
-so, a shell can go through multiple bodies without having to replace the blackbox containing their neuralgraph
-i think the idea of [[SHELLS|shells]] not really being able to be repaired like regular robots can is fun
-they are self-repairing to an extent. but to perform repairs outside of that process is difficult, and it is better to just swap a broken part out altogether than attempt to fix it
-[[NYXBOTS|nyxbots]] on the other hand are more repairable, but can't self-repair like [[SHELLS|shells]] can
-[[SHELLS|shells]] are kind of built with the expectation that they aren't going to be around for very long (bc their intended purpose on [[EARTH|earth]] was to infiltrate locations, attack targets, get destroyed, and in the process of their destruction, release [[IVORY|ivory]] dust that's toxic to humans)
-whereas [[NYXBOTS|nyxbots]] are built like tanks and are self-operating military vehicles essentially
-built to last
-shell outer casing, when damaged, cracks and chips off and releases [[IVORY|ivory]] dust
-but it can also use [[IVORY|ivory]] dust to repair the damage
-nyxbot outer casing when damaged, just gets scratched and dented, and those dents don't rlly go away without manual repair
-honestly an apt comparison is bone/enamel v.s. metal
-[[IVORY|ivory]] casing consists of fibers and is strikingly similar to bone/enamel
-[[IVORY|ivory]] casing can be remineralized, similar to how teeth can
-[[SHELLS|shells]] are literally just. [[MOON|moon]] skeletons LMAO
-this has vibes
-
-hehehehe, i set up a little bot script that'll archive+delete messages i've sent in this channel, turn it into a markdown file, put it in my obsidian wiki and sync it to the github repo so it'll pop up on the online wiki
-lemme [[TEST|test]] it
-
-[[WARP RESON]]
-[[BURST RESON]]
-HEM [[[[RESON]] CRYSTALS]]
-[[RESON]]
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
+hehehehe, i set up a little bot script that'll archive+delete messages i've sent in discord, turn it into a markdown file, put it in my obsidian wiki and sync it to the github repo so it'll pop up on the online wiki
