--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -2,22 +2,9 @@
 tags:
   - notes
 ---
+hehehehe, i set up a little bot script that'll archive+delete messages i've sent in discord, turn it into a markdown file, put it in my obsidian wiki and sync it to the github repo so it'll pop up on the online wiki
 
-[[WARP RESON]]
-[[BURST RESON]]
-HEM [[RESON CRYSTALS|RESON crystals]]
-[[THE CORONET]] [[SHELLS|shells]] [[RESON]] ASSRESON
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-!wikify 1331844149493629019
-1331844149493629019
+if you see some fucked up stuff in here, that's probably me messing around with it
+
+very cool
+testing this out
