Quartz sync: Jan 23, 2025, 1:24 AM

--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -8,3 +8,4 @@ if you see some fucked up stuff in here, that's probably me messing around with 
 
 very cool
 testing this out
+!wikify 1331886544922869773
