Quartz sync: Jan 23, 2025, 1:26 AM

--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -7,3 +7,6 @@ hehehehe, i set up a little bot script that'll archive+delete messages i've sent
 if you see some fucked up stuff in here, that's probably me messing around with it
 very cool
 testing this out
+very cool
+testing this out
+!wikify 1331886544922869773
