--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -4,14 +4,10 @@ tags:
 ---
 hehehehe, i set up a little bot script that'll archive+delete messages i've sent in discord, turn it into a markdown file, put it in my obsidian wiki and sync it to the github repo so it'll pop up on the online wiki
 
-if you see some fucked up stuff in here, that's probably me messing around with it
-very cool
-testing this out
+very cool![[2ec24c7d-9652-474c-b7a1-acd2e38c0568.png]]
 very cool
 testing this out
 !wikify 1331886544922869773
-very cool
-testing this out
 !wikify 1331886544922869773
 !wikify 1331886544922869773
 !wikify 1331886544922869773
