--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -5,8 +5,9 @@ tags:
 hehehehe, i set up a little bot script that'll archive+delete messages i've sent in discord, turn it into a markdown file, put it in my obsidian wiki and sync it to the github repo so it'll pop up on the online wiki
 
 very cool
-very cool![[ac3423ab-048d-4a7b-b808-efaec4ab329a.png]]
+![[9ca1ac9c-6596-4163-9e5c-2edc1118d530.png]]
 testing this out
+!wikify 1331886544922869773
 !wikify 1331886544922869773
 !wikify 1331886544922869773
 !wikify 1331886544922869773
