--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -5,8 +5,11 @@ tags:
 hehehehe, i set up a little bot script that'll archive+delete messages i've sent in discord, turn it into a markdown file, put it in my obsidian wiki and sync it to the github repo so it'll pop up on the online wiki
 
 very cool
-![[9ca1ac9c-6596-4163-9e5c-2edc1118d530.png]]
+
+![[5c3f8541-1e1e-474d-a00d-8487027aecaa.png]]
+
 testing this out
+!wikify 1331886544922869773
 !wikify 1331886544922869773
 !wikify 1331886544922869773
 !wikify 1331886544922869773
