Quartz sync: Jan 23, 2025, 1:38 AM

--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -6,7 +6,7 @@ hehehehe, i set up a little bot script that'll archive+delete messages i've sent
 
 very cool
 
-![[5c3f8541-1e1e-474d-a00d-8487027aecaa.png]]
+![[f24c9968-47c3-4e54-b1ad-349b514900b2.png]]
 
 testing this out
 !wikify 1331886544922869773
@@ -16,3 +16,10 @@ testing this out
 !wikify 1331886544922869773
 !wikify 1331886544922869773
 !wikify 1331886544922869773
+!wikify 1331886544922869773
+quite incredible
+
+![[bd2d2902-9d92-4d8c-936a-0e4e40e7ac4b.png]]
+
+![[a23d259a-45b3-445e-9e28-f287f2c2789b.png]]
+
