Quartz sync: Jan 23, 2025, 1:40 AM

--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -6,7 +6,7 @@ hehehehe, i set up a little bot script that'll archive+delete messages i've sent
 
 very cool
 
-![[f24c9968-47c3-4e54-b1ad-349b514900b2.png]]
+![[7a48792d-b2a7-4501-af4b-03ce159a3f5e.png]]
 
 testing this out
 !wikify 1331886544922869773
@@ -19,7 +19,9 @@ testing this out
 !wikify 1331886544922869773
 quite incredible
 
-![[bd2d2902-9d92-4d8c-936a-0e4e40e7ac4b.png]]
+![[c8493ac9-4761-437a-ba75-300f69124f55.png]]
 
-![[a23d259a-45b3-445e-9e28-f287f2c2789b.png]]
+![[9faf4c60-a2e9-4253-b90a-c4bc7f549c2f.png]]
 
+!wikify 1331886544922869773
+<a:grynmoHyper:1228809334146863195>
