Quartz sync: Jan 23, 2025, 1:50 AM

--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -3,3 +3,14 @@ tags:
   - notes
 ---
 hehehehe, i set up a little bot script that'll archive+delete messages i've sent in discord, turn it into a markdown file, put it in my obsidian wiki and sync it to the github repo so it'll pop up on the online wiki
+
+i got attachment downloading working yay
+wonderful first iteration of wiki archival bot...
+so i have a !wikify command and it will do stuff like this. so if i say stuff like shell and [[ELEVEN|eleven]] it will link those keywords to corresponding notes
+it will also archive up to a specific point i can specify. + there is the option to delete everything archived from discord (to keep shit tidy)
+it deletes only my messages rn
+it is quite cool
+imma record it hold up
+
+![[94fb8ed1-725c-476f-9c7c-d7fd39cae439.png]]
+
