Quartz sync: Jan 23, 2025, 1:53 AM

--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -8,9 +8,13 @@ i got attachment downloading working yay
 wonderful first iteration of wiki archival bot...
 so i have a !wikify command and it will do stuff like this. so if i say stuff like shell and [[ELEVEN|eleven]] it will link those keywords to corresponding notes
 it will also archive up to a specific point i can specify. + there is the option to delete everything archived from discord (to keep shit tidy)
+after it does all that it syncs it to the online wiki
 it deletes only my messages rn
 it is quite cool
-imma record it hold up
 
-![[94fb8ed1-725c-476f-9c7c-d7fd39cae439.png]]
+![[b3aa77b4-8756-47cf-9f12-f7ec9d62c5c9.png]]
+
+
+
+![[9347ab6f-fbea-45ee-857f-e138c84eda36.png]]
 
