Quartz sync: Jan 23, 2025, 8:45 AM

--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -16,3 +16,8 @@ it is quite cool
 
 ![[b573c009-7735-4e7c-a9cb-b9a09793bd5f.png]]
 
+[[BIRDS|birds]] are most certainly connected to [[THE VEIL|the veil]]
+even before future arc
+which explains why they are hard to destroy. they're funnels for collective perception and can go intangible bc of it
+[[BIRDS|birds]] aren't real lmao
+[[BIRDS|birds]] being glyphangels would be interesting but i kind of doubt that. they're just silly little [[IVORY|ivory]] critters that [[SHELLS|shells]] may or may not happen to get reincarnated into due to [[THE CORONET|the coronet]]'s fucked up recycling system
