Quartz sync: Jan 23, 2025, 1:48 PM

--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -21,3 +21,20 @@ even before future arc
 which explains why they are hard to destroy. they're funnels for collective perception and can go intangible bc of it
 [[BIRDS|birds]] aren't real lmao
 [[BIRDS|birds]] being glyphangels would be interesting but i kind of doubt that. they're just silly little [[IVORY|ivory]] critters that [[SHELLS|shells]] may or may not happen to get reincarnated into due to [[THE CORONET|the coronet]]'s fucked up recycling system
+
+![[Pasted image 20250123134722.png]]
+
+she is pretty cute w/o twintails hehe
+
+i rlly like her design, just need to figure out some specific parts of it and refine em 
+she does have that vibe of "out-of-the-loop introverted weirdo who is somehow friends with everyone and rapidly alternates between lazy and energetic" 
+
+instead of being a silent protagonist she just wields a form of [[RESON|reson]] that "silences" aspects of things which i think is fun 
+she wields [[STASIS RESON|stasis reson]], [[RESON|reson]] is inherently unstable but [[STASIS RESON|stasis reson]] suppresses that aspect of itself which makes it effective in creating temporary weapons and constructs with it 
+girl can just delete ppl too shes living the introvert dream
+
+i like the type of girl who can literally just end process my existence and rip me out of the timeline 
+
+would have been smarter to do side view after back view but w/e 
+im probably just gonna do back when i come back to this bc its less painful for my brain LOL
+
