Quartz sync: Jan 23, 2025, 5:53 PM

--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -38,3 +38,26 @@ i like the type of girl who can literally just end process my existence and rip 
 would have been smarter to do side view after back view but w/e 
 im probably just gonna do back when i come back to this bc its less painful for my brain LOL
 
+[[ELEVEN|eleven]] is like megaman but instead of defeating ppl and gaining powers from them, she just gains additional layers of psychological damage and codependency as she bases her personality off of other [[IDOLSHELLS|idolshells]] she views as better and more present than her
+she gains the toxic traits of these [[SHELLS|shells]] in the process. she has literally nothing that's inherently hers and she struggles to be present in her own narrative and is a passive observer in her own fight for survival
+
+she emerges as someone who doesn't just imitate others, but seemingly reconstructs her entire psychological infrastructure through borrowed fragments, resulting in a fragmented, reactive persona meant to bury up a core nothingness
+
+she never "discovers her true self" because she fundamentally does not have one, she is a hollowed out copy of somebody else, left with only that person's subconscious mind to work with at the start
+
+her "true self" is just the original shell she was copied from who has more of a purpose than she does. they're no longer around though
+
+other [[SHELLS|shells]] who were prompted with proper identities mainly just see [[ELEVEN|eleven]]'s unprompted existence as something they can manipulate, to make her become something they need and do things that they couldn't
+
+unfortunately, every trait she sees in another shell that is worth replicating is part of that shell's unhealthy way of coping with existence and part of the performative act that they show off to the world
+
+[[ELEVEN|eleven]]'s journey isn't about self-discovery but about survival with what she has
+
+[[PARELLA|parella]] saves [[ELEVEN|eleven]] from becoming a purely functional tool manipulated by the system they're trapped in when [[ELEVEN|eleven]] is first instanced. however, this makes matters even more complicated, as [[PARELLA|parella]], despite her support towards [[ELEVEN|eleven]], unconsciously attempts to shape [[ELEVEN|eleven]] into her lost significant other, who happens to be the original shell that [[ELEVEN|eleven]] is actually a copy of
+
+in other words, [[ELEVEN|eleven]] is the Hollow Knight
+an empty vessel surrounded by fabricated artificial wholeness
+
+[[ELEVEN|eleven]] discovering that [[PARELLA|parella]] was just projecting [[UNI|uni]] onto her and it just turns into a heartbreaking argument about how [[ELEVEN|eleven]] trusted [[PARELLA|parella]] and [[PARELLA|parella]] took advantage of it, and [[PARELLA|parella]] desperately tries to tell [[ELEVEN|eleven]] that wasn't her intention
+[[PARELLA|parella]] and [[ELEVEN|eleven]] make for a great couple bc they are both the most reactive mfs in existence
+
