--- a/content/NOTES/2025-01-23.md
+++ b/content/NOTES/2025-01-23.md
@@ -61,3 +61,9 @@ an empty vessel surrounded by fabricated artificial wholeness
 [[ELEVEN|eleven]] discovering that [[PARELLA|parella]] was just projecting [[UNI|uni]] onto her and it just turns into a heartbreaking argument about how [[ELEVEN|eleven]] trusted [[PARELLA|parella]] and [[PARELLA|parella]] took advantage of it, and [[PARELLA|parella]] desperately tries to tell [[ELEVEN|eleven]] that wasn't her intention
 [[PARELLA|parella]] and [[ELEVEN|eleven]] make for a great couple bc they are both the most reactive mfs in existence
 
+[[ELEVEN|eleven]] eleven eleven eleven eleven eleven
+
+eleven [[PARELLA|parella]] parella
+
+parella
+
