Quartz sync: Jan 24, 2025, 3:25 AM

--- a/content/NOTES/2025-01-24.md
+++ b/content/NOTES/2025-01-24.md
@@ -2,21 +2,16 @@
 tags:
   - notes
 ---
-tempted to add a small amount of red somewhere in the design. might do it in the form of subtle component lights
-
+tempted to add a small amount of red somewhere in [[ELEVEN|eleven's]] design. might do it in the form of subtle component lights
 might allow for a cool cyan/red chromatic anaglyph effect too
-
 if her hidden eye was red.... that would be neat but maybe too on the nose lol
 
-
-
-![[a23fc4e3-2235-4c7f-abde-b892d3e37d93.png]]
+![[a23fc4e3-2235-4c7f-abde-b892d3e37d93.png|400]]
 
 like this vibe could be neat
-
 hehehe
 
-![[ffdf6e4d-daca-4589-b96e-9b2c3ca6aacf.png]]
+![[ffdf6e4d-daca-4589-b96e-9b2c3ca6aacf.png|400]]
 
 
 
@@ -25,46 +20,25 @@ hehehe
 observation i've had of something i've been doing without realizing it: [[IDOLSHELLS|idolshells]] instanced by normal means do not often possess antennae
 
 its often [[WARSHELLS|warshells]] and [[NAVSHELLS|navshells]] that have them
-
 like [[CERISE|cerise]] and [[PARELLA|parella]] and [[CROQUET|croquet]] don't have any
-
 well ok maybe croquet has them but they're stylized as bunny ears
-
 all [[SHELLS|shells]] do possess earpiece modules around where the ears would but they are typically flat and don't really look like human ears. often covered up by hair as well
-
 but some shells also possess antennae in addition to that
-
 [[ELEVEN|eleven]] has a fun mix of earpieces + antennae
-
 and her earpieces are big enough to not be entirely covered by the hair
-
 [[VESPID|vespid]] also has bigger earpieces and they are cone-shaped
-
 [[GAMMA|gamma]] has an earpiece that also doubles as an antenna
-
 [[FRUTIGER|frutiger]] has one double-pronged antenna on one side of her head, it almost looks like a router
-
 oh wait... parella actually does have horns.. i forgot about that
-
 i guess with idolshells it's harder to tell bc their antennae are often stylized
-
 realizing 11 (the number) visually resembles a pause button
-
 and eleven uses [[STASIS RESON|stasis reson]]
-
 thats cool as fuck actually
-
 im tempted to shove more tv remote themed stuff into the shells
-
 triangle inscribed within circle is already kind of a prominent symbol
-
 and that resembles a play button
-
 also a symbol of unity of the divine and material, and also of sobriety and rehabilitation
-
 mind, body, spirit
-
 also connects to trinity
-
 both the religious concept, and the nuclear bomb hehe
 
