Quartz sync: Jan 24, 2025, 11:32 AM

--- a/content/NOTES/2025-01-24.md
+++ b/content/NOTES/2025-01-24.md
@@ -42,3 +42,35 @@ mind, body, spirit
 also connects to trinity
 both the religious concept, and the nuclear bomb hehe
 
+thinking of how [[THE CORONET|the coronet]]'s 13 sectors is loosely tied to US+JP education systems
+most education systems have 12 years worth of education
+[[SECTOR 13|sector 13]], the topmost sector in the [[RESON CLOUDS|reson clouds]], would be a "graduation sector" where you go to find higher knowledge. oftentimes you don't return from this, since the [[RESON|reson]] clouds seemingly erase you
+of course the real-world equivalent for this would be university. 13's also a pretty unlucky number on top of that. some buildings don't have a 13th floor
+the [[IDOLSHELLS|idolshells]], being ageless, means the sectors don't necessarily represent level of age/education, they're just the places where the [[SHELLS|shells]] can operate and said places loosely correlate with [[VIEWERSHIP|viewership]]
+the lower down a sector is, the closer the shells inhabiting it are to their roots of war typically
+meaning, the shells in the lower sectors are often less caring about extrinsic demands
+the [[WARSHELLS|warshells]] in the lower sectors just fight without any care about viewership, and they aren't even tied to it
+12 is a pretty important number in shell culture anyhow
+12 visitable sectors, 12 episodes in a season
+12 [[EARTH|earth]] days of operational life
+12 is also the month of december and christmas, which is associated with [[SANTA|santa]]
+12 is representative of boundaries, and the act of reaching them
+whereas 13 is what lies beyond it all
+[[PROMENADES|promenades]] for shells are essentially dances of death where they fight in battle for the sake of performance
+to die without actually crossing the boundary of true death
+in the real world, promenades act as sendoffs for graduating students in high school, to pursue higher education or something else
+but promenades in panprom are representative of a cyclic immortality. the process of casting off a shell through dying in combat, to then be reinstanced in a new shell
+battles being called promenades are cool. god
+certainly feels unique and shell-like
++ there is the whole thing of prom crowns literally being coronets, and The Coronet is literally the name of the megastructure the shells are in
+PanProm! really is the perfect name for this game, just took some time for me to stumble into it lmao
+panopticon/all + promenade/prompt
+also despite the high school connotations w/ proms and shit, all shells are prompted as 18+ (though technically they are ageless since they're robots)
+the word "prom" doesn't really mean the same thing to the shells and is more of an abstract concept that has been gradually synthesized
+their “promenades” are less about the joy and excitement of finishing and more about the weight of what comes after that
+this sense of forever moving forward, forever celebrating what comes next, but they never truly reach a destination, and what comes next never truly comes because of their immortality
+if that destination is reached, it's because they no longer exist
+most shells don't have any real desire to break out of the cycle, and that awareness of the cycle just something they’ve accepted over time
+or, maybe it’s not even a fully conscious realization. more of a vague understanding that they're forever caught in this performance
+i guess the whole thing is about being stuck in something that you should have grown out of or moved past long ago
+hence why the shells are all adultlike but are all stuck in this eternal promenade
